--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,9 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  azstore: ^1.0.3
+  azstore: 1.0.3
 
 dev_dependencies:
   lints: ^2.1.0
   test: ^1.24.0
+  mockito: 5.4.4
