--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,13 @@ environment:
 # Add regular dependencies here.
 dependencies:
   azstore: 1.0.3
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   lints: ^4.0.0
   test: ^1.24.0
   mockito: 5.4.4
-  build_runner: 2.4.11
+  build_runner: ^2.4.11
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
