--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: azure_fhir_event_processor
-description: Process FHIR events emitted by Azure Health Data Services using Dart queue workers.
+description: Process FHIR events emitted by Azure Health Data Services using
+  Dart queue workers.
 version: 1.0.0
 repository: https://github.com/evoleen/azure_fhir_event_processor
 
@@ -13,9 +14,10 @@ dependencies:
   json_annotation: ^4.9.0
 
 dev_dependencies:
-  lints: ^4.0.0
-  test: ^1.24.0
-  mockito: ^5.4.4
   build_runner: ^2.4.11
   freezed: ^2.5.7
+  http: ^0.13.0
   json_serializable: ^6.8.0
+  lints: ^4.0.0
+  mockito: ^5.4.4
+  test: ^1.24.0
